# NativeGifPlay

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yang/nativegifplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gif_handle.cpp
app/src/main/java/com/yang/nativegifplay/: App.kt  GifPlay.kt  MainActivity.kt  MyGlideModule.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yang/nativegifplay/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
